--- a/.github/workflows/FunctionsAppService.yml
+++ b/.github/workflows/FunctionsAppService.yml
@@ -5,10 +5,10 @@ on:
     - main
 env:
   AZURE_FUNCTIONAPP_NAME: FunctionsAppService
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: PdfProcessingAzureFunc/publish
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: src/PdfProcessingAzureFunc/publish
   CONFIGURATION: Release
   DOTNET_CORE_VERSION: 6.0.x
-  WORKING_DIRECTORY: PdfProcessingAzureFunc
+  WORKING_DIRECTORY: src/PdfProcessingAzureFunc
 jobs:
   build-and-deploy:
     runs-on: windows-latest
