--- a/src/nuget.config
+++ b/src/nuget.config
@@ -8,8 +8,8 @@
     <add key="All" value="(Aggregate source)" />
   </activePackageSource>
   <packageSources>
-    <add key="NuGet" value="https://api.nuget.org/v3/index.json" />
-	<add key="Telerik" value="https://nuget.telerik.com/nuget" />
+    <add key="NuGet" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
+	<add key="Telerik" value="https://nuget.telerik.com/v3/index.json" protocolVersion="3" />
   </packageSources>
   <!-- 
     Visual Studio will prompt you for your Telerik account credentials or you can set these environment variables to set it ahead of time.
